ecmascript/parser/tests/test262-error-references/fail/0053737b6145994c.js.stderr
error: Trailing comma is not allowed
 --> $DIR/tests/test262-parser/fail/0053737b6145994c.js:1:6
  |
1 | var x, ;
  |      ^

